--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,17 +37,16 @@
 
     <!-- particles.js container -->
     <div id="particles-js"></div>
-</body>
-<script th:src="@{/login1.js}" src="../static_resources/js/bsp.js"></script>
+<script th:src="@{/login1.js}" ></script>
 <div id="particles">
-    <script th:src="@{/login2.js}" src="../static_resources/js/bsp.js"></script>
-    <script th:src="@{/login3.js}" src="../static_resources/js/bsp.js"></script>
+    <script th:src="@{/login2.js}" ></script>
+    <script th:src="@{/login3.js}" ></script>
 
     <!-- stats.js -->
-    <<script th:src="@{/login4.js}" src="../static_resources/js/bsp.js"></script>
+    <script th:src="@{/login4.js}" ></script>
 
 </div>
-    <script th:src="@{/bsp.js}" src="../static_resources/js/bsp.js"></script>
+    <script th:src="@{/bsp.js}" ></script>
 
 </body>
 </html>
