--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/test.css}">
-    <title>Tippspiel Login</title>
+    <title>Tippspiel Sign up</title>
 </head>
 <body>
 <div class="cursor"></div>
