--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,7 +28,8 @@
     </div>
     <div id="erklärung">
         <p>
-
+            Erklärung:
+            Um in diesem Tippspiel tippen zu können kann man über Navigationsleiste zur Tippseite gelangen. Von dort aus kann man pro Spieltag für jedes noch nicht angefangene Spiel sein Ergebnis sowohl für Heimverein als auch für den Auswärtsverein tippen solange das Spiel noch nicht angefangen hat. Mit dem Dropdown Menü oben in der Mitte kann man die einzelnen Spieltage auswählen. Wenn nun ein Spiel gespielt wurde werden auf der Ergebnisseite die auch über die Navigationsleiste erreichbar ist die Ergebnisse angezeigt.  Pro Spiel bei welchem man den richtigen Gewinner getippt hat bekommt man 1 Punkt. Wenn man zusätzliche die richtige Tordifferenz getippt hat bekommt man noch 2 zusätzliche Punkte hat man allerdings das richtige Ergebnis exakt getippt bekommt man noch einmal zusätzlich einen Punkt. Wenn man nun seine Gesamtpunktzahl herausfinden möchte kann man auf der Homepage welche auch über die Navigationsleiste erreichbar ist sein Gesamtergebnis einsehen.
         </p>
     </div>
 </div>
